Fix word overflow

--- a/public/css/gradient.css
+++ b/public/css/gradient.css
@@ -2,6 +2,7 @@ html {
     height: calc(100vh - 96px);
     box-sizing: border-box;
     overflow-x: hidden;
+    overflow-wrap: break-word;
 }
 
 body {
